<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_four"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fernandoapeguero.quizit.QuestionFour">

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

   <ImageView
       android:src="@drawable/great_wall_of_china"
       style="@style/image_style"
     />

   <TextView
       android:id="@+id/china_question"
       style="@style/header_style"/>

       <TextView
           android:text="@string/select_your_answer"
           style="@style/sub_hear_style"/>

   <RadioGroup
       android:id="@+id/radio_group_china_1"
       android:layout_width="match_parent"
       android:layout_height="120dp"
       android:layout_marginBottom="16dp"
       android:layout_marginLeft="20dp">

      <RadioButton
          android:id="@+id/radioButton_china"
          style="@style/radio_button_style"
          android:text="@string/tang"/>

      <RadioButton
          android:id="@+id/radioButton_china2"
          style="@style/radio_button_style"
          android:text="@string/zhou"/>

      <RadioButton
          android:id="@+id/radioButton_china3"
          style="@style/radio_button_style"
          android:text="@string/qin" />
   </RadioGroup>

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@android:color/darker_gray"/>

       <Button
           android:id="@+id/great_wall_submit"
           android:text="@string/submit"
           style="?android:buttonBarButtonStyle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAppearance="?android:textAppearanceLarge"/>

   </LinearLayout>
   </ScrollView>

