<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_six"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fernandoapeguero.quizit.QuestionSix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/image_style"
            android:src="@drawable/blue_hole" />

        <TextView
            android:id="@+id/blue_hole_question"
            style="@style/header_style" />

        <TextView
            style="@style/sub_hear_style"
            android:text="@string/select_your_answer" />

        <RadioGroup
            android:id="@+id/radio_group_bluehole"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:id="@+id/radioButton_blue_hole_maldives"
                style="@style/radio_button_style"
                android:text="@string/maldives" />

            <RadioButton
                android:id="@+id/radioButton_blue_hole_philipines"
                style="@style/radio_button_style"
                android:text="@string/philipines" />

            <RadioButton
                android:id="@+id/radioButton_blue_hole_belize"
                style="@style/radio_button_style"
                android:text="@string/belize" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/submit_blue_hole"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
