<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_one"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.fernandoapeguero.quizit.QuestionOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/image_style"
            android:src="@drawable/statue_of_zeus_at_olympia" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/ask_question"
                style="@style/header_style" />

            <TextView
                style="@style/sub_hear_style"
                android:text="@string/select_your_answer" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/radioButton"
                    style="@style/radio_button_style"
                    android:text="@string/spain" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@style/radio_button_style"
                    android:text="@string/greece" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    style="@style/radio_button_style"
                    android:text="@string/italy" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/submit_answer"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAppearance="?android:textAppearanceLarge" />

    </LinearLayout>
</ScrollView>
