<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fernandoapeguero.quizit.QuestionThree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/image_style"
            android:src="@drawable/eiffel_tower"/>

        <TextView
            android:id="@+id/eiffel_ask_question"
            style="@style/header_style"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/name_and_year"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/the_year_build"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1887"/>

                <CheckBox
                    android:id="@+id/year_1885"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1885"/>

                <CheckBox
                    android:id="@+id/year_1889"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1889"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/noel_incorrect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noel"/>

                <CheckBox
                    android:id="@+id/gustave_eiffel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gustave"/>

                <CheckBox
                    android:id="@+id/gabriel_incorrect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gabriel"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/submit_eiffel"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit"/>
    </LinearLayout>
</ScrollView>
